Update certificate links in the awards section for accuracy

--- a/index.html
+++ b/index.html
@@ -1209,7 +1209,7 @@
                         Successfully demonstrated ability to convert timezones, map locations via IP addresses,
                         create tasks and merge statements, and work with stream functionality.
                     </div>
-                    <a href="https://achieve.snowflake.com/035477d2-5841-4e60-8516-f5d0f5863e2c?fbclid=IwY2xjawKz7qdleHRuA2FlbQIxMQABHr5ZoFZ7gG440hHCWTgITNkGnkdiFvx0adPJ97XXt7KUEm06o6-9otzMsE1M_aem_1ZFj9wC6kIi31yt7bTJqqw#acc.f8hRNcIo" 
+                    <a href="https://achieve.snowflake.com/b7792517-f25b-49c9-b507-2205d5716798?fbclid=IwY2xjawKz7qNleHRuA2FlbQIxMQABHq-3O_iaNfnox9r2hNMrTj53aCgPh16WdJCjD_iqyD4VhdiKNXwGeLSD1wzu_aem_86QhZr2wzn9ZnZtWVscjLA#acc.mU18WDH4" 
                        class="certificate-link" target="_blank" rel="noopener noreferrer">
                         <i class="fas fa-external-link-alt"></i>View Certificate
                     </a>
@@ -1243,7 +1243,7 @@
                         Hands-on certification demonstrating proficiency in creating tables and file formats,
                         compute resources, copy into statements, and transforming CSV and JSON data.
                     </div>
-                    <a href="https://achieve.snowflake.com/b7792517-f25b-49c9-b507-2205d5716798?fbclid=IwY2xjawKz7qNleHRuA2FlbQIxMQABHq-3O_iaNfnox9r2hNMrTj53aCgPh16WdJCjD_iqyD4VhdiKNXwGeLSD1wzu_aem_86QhZr2wzn9ZnZtWVscjLA#acc.mU18WDH4" 
+                    <a href="https://achieve.snowflake.com/035477d2-5841-4e60-8516-f5d0f5863e2c?fbclid=IwY2xjawKz7qdleHRuA2FlbQIxMQABHr5ZoFZ7gG440hHCWTgITNkGnkdiFvx0adPJ97XXt7KUEm06o6-9otzMsE1M_aem_1ZFj9wC6kIi31yt7bTJqqw#acc.f8hRNcIo" 
                        class="certificate-link" target="_blank" rel="noopener noreferrer">
                         <i class="fas fa-external-link-alt"></i>View Certificate
                     </a>
@@ -1279,202 +1279,82 @@
     </section>
 
     <!-- Projects Section -->
-    <section id="projects" class="section" style="background: #f8f9fa">
-      <div class="container">
-        <div class="section-title">
-          <h2>My Projects & Systems</h2>
-          <p>Showcase of applications and systems I've developed</p>
+<section id="projects" class="section" style="background: #f8f9fa">
+  <div class="container">
+    <div class="section-title">
+      <h2>My Projects & Systems</h2>
+      <p>Showcase of applications and systems I've developed</p>
+    </div>
+    <div class="projects-grid">
+      <div class="project-card">
+        <div class="project-image">
+          <i class="fas fa-bus"></i>
         </div>
-        <div class="projects-grid">
-          <div class="project-card">
-            <div class="project-image">
-              <i class="fas fa-graduation-cap"></i>
-            </div>
-            <div class="project-content">
-              <h3>Student Management System</h3>
-              <div class="project-type">Web Application</div>
-              <div class="project-description">
-                Comprehensive student information management system with features for enrollment, 
-                grade management, attendance tracking, and report generation. Includes admin panel 
-                and student portal with real-time notifications.
-              </div>
-              <div class="project-tech">
-                <span class="tech-tag">PHP</span>
-                <span class="tech-tag">MySQL</span>
-                <span class="tech-tag">JavaScript</span>
-                <span class="tech-tag">Bootstrap</span>
-                <span class="tech-tag">AJAX</span>
-              </div>
-              <div class="project-links">
-                <a href="#" class="project-link">
-                  <i class="fas fa-external-link-alt"></i>
-                  Live Demo
-                </a>
-                <a href="#" class="project-link">
-                  <i class="fab fa-github"></i>
-                  Source Code
-                </a>
-              </div>
-            </div>
+        <div class="project-content">
+          <h3>Bus Tracking System Using GPS with Data Analytics</h3>
+          <div class="project-type">Transportation Management System</div>
+          <div class="project-description">
+            Real-time bus tracking system with GPS integration and comprehensive data analytics. 
+            Features live location monitoring, route optimization, passenger analytics, and 
+            performance reporting for efficient fleet management.
           </div>
-
-          <div class="project-card">
-            <div class="project-image">
-              <i class="fas fa-shopping-cart"></i>
-            </div>
-            <div class="project-content">
-              <h3>E-Commerce Platform</h3>
-              <div class="project-type">Full Stack Application</div>
-              <div class="project-description">
-                Modern e-commerce platform with product catalog, shopping cart, payment integration, 
-                order management, and admin dashboard. Features responsive design and secure payment processing.
-              </div>
-              <div class="project-tech">
-                <span class="tech-tag">PHP</span>
-                <span class="tech-tag">MySQL</span>
-                <span class="tech-tag">jQuery</span>
-                <span class="tech-tag">PayPal API</span>
-                <span class="tech-tag">CSS3</span>
-              </div>
-              <div class="project-links">
-                <a href="#" class="project-link">
-                  <i class="fas fa-external-link-alt"></i>
-                  Live Demo
-                </a>
-                <a href="#" class="project-link">
-                  <i class="fab fa-github"></i>
-                  Source Code
-                </a>
-              </div>
-            </div>
-          </div>
-
-          <div class="project-card">
-            <div class="project-image">
-              <i class="fas fa-hospital"></i>
-            </div>
-            <div class="project-content">
-              <h3>Hospital Management System</h3>
-              <div class="project-type">Healthcare Application</div>
-              <div class="project-description">
-                Complete hospital management solution with patient registration, appointment scheduling, 
-                medical records, billing system, and staff management. Built with security and HIPAA compliance in mind.
-              </div>
-              <div class="project-tech">
-                <span class="tech-tag">PHP</span>
-                <span class="tech-tag">MySQL</span>
-                <span class="tech-tag">JavaScript</span>
-                <span class="tech-tag">Chart.js</span>
-                <span class="tech-tag">PDF Generation</span>
-              </div>
-              <div class="project-links">
-                <a href="#" class="project-link">
-                  <i class="fas fa-external-link-alt"></i>
-                  Live Demo
-                </a>
-                <a href="#" class="project-link">
-                  <i class="fab fa-github"></i>
-                  Source Code
-                </a>
-              </div>
-            </div>
-          </div>
-
-          <div class="project-card">
-            <div class="project-image">
-              <i class="fas fa-book"></i>
-            </div>
-            <div class="project-content">
-              <h3>Library Management System</h3>
-              <div class="project-type">Desktop Application</div>
-              <div class="project-description">
-                Digital library system for book catalog management, member registration, borrowing/returning 
-                system, fine calculation, and inventory tracking. Features advanced search and reporting capabilities.
-              </div>
-              <div class="project-tech">
-                <span class="tech-tag">PHP</span>
-                <span class="tech-tag">MySQL</span>
-                <span class="tech-tag">HTML5</span>
-                <span class="tech-tag">CSS3</span>
-                <span class="tech-tag">JavaScript</span>
-              </div>
-              <div class="project-links">
-                <a href="#" class="project-link">
-                  <i class="fas fa-external-link-alt"></i>
-                  Live Demo
-                </a>
-                <a href="#" class="project-link">
-                  <i class="fab fa-github"></i>
-                  Source Code
-                </a>
-              </div>
-            </div>
-          </div>
-
-          <div class="project-card">
-            <div class="project-image">
-              <i class="fas fa-chart-line"></i>
-            </div>
-            <div class="project-content">
-              <h3>Sales Analytics Dashboard</h3>
-              <div class="project-type">Business Intelligence</div>
-              <div class="project-description">
-                Interactive dashboard for sales performance tracking with real-time charts, KPI monitoring, 
-                data visualization, and automated report generation. Helps businesses make data-driven decisions.
-              </div>
-              <div class="project-tech">
-                <span class="tech-tag">PHP</span>
-                <span class="tech-tag">MySQL</span>
-                <span class="tech-tag">Chart.js</span>
-                <span class="tech-tag">AJAX</span>
-                <span class="tech-tag">JSON</span>
-              </div>
-              <div class="project-links">
-                <a href="#" class="project-link">
-                  <i class="fas fa-external-link-alt"></i>
-                  Live Demo
-                </a>
-                <a href="#" class="project-link">
-                  <i class="fab fa-github"></i>
-                  Source Code
-                </a>
-              </div>
-            </div>
-          </div>
-
-          <div class="project-card">
-            <div class="project-image">
-              <i class="fas fa-user-friends"></i>
-            </div>
-            <div class="project-content">
-              <h3>Social Media Platform</h3>
-              <div class="project-type">Social Network</div>
-              <div class="project-description">
-                Mini social media platform with user profiles, post sharing, real-time messaging, 
-                friend connections, and news feed. Features modern UI/UX design and responsive layout.
-              </div>
-              <div class="project-tech">
-                <span class="tech-tag">PHP</span>
-                <span class="tech-tag">MySQL</span>
-                <span class="tech-tag">JavaScript</span>
-                <span class="tech-tag">WebSocket</span>
-                <span class="tech-tag">CSS3</span>
-              </div>
-              <div class="project-links">
-                <a href="#" class="project-link">
-                  <i class="fas fa-external-link-alt"></i>
-                  Live Demo
-                </a>
-                <a href="#" class="project-link">
-                  <i class="fab fa-github"></i>
-                  Source Code
-                </a>
-              </div>
-            </div>
+          <div class="project-tech">
+            <span class="tech-tag">PHP</span>
+            <span class="tech-tag">MySQL</span>
+            <span class="tech-tag">OSRM</span>
+            <span class="tech-tag">Leaflet Maps</span>
+            <span class="tech-tag">Chart.js</span>
+            <span class="tech-tag">JavaScript</span>
           </div>
         </div>
       </div>
-    </section>
+
+      <div class="project-card">
+        <div class="project-image">
+          <i class="fas fa-hospital-alt"></i>
+        </div>
+        <div class="project-content">
+          <h3>Zamboanga del Sur Medical Center - Inventory Management & Monitoring System</h3>
+          <div class="project-type">Healthcare Management System</div>
+          <div class="project-description">
+            Comprehensive inventory management system for medical supplies and equipment. 
+            Features real-time monitoring, automated alerts for low stock, expiration tracking, 
+            procurement management, and detailed reporting for efficient hospital operations.
+          </div>
+          <div class="project-tech">
+            <span class="tech-tag">PHP</span>
+            <span class="tech-tag">MySQL</span>
+            <span class="tech-tag">JavaScript</span>
+            <span class="tech-tag">Bootstrap</span>
+            <span class="tech-tag">AJAX</span>
+            <span class="tech-tag">Chart.js</span>
+          </div>
+        </div>
+      </div>
+
+      <div class="project-card">
+        <div class="project-image">
+          <i class="fas fa-church"></i>
+        </div>
+        <div class="project-content">
+          <h3>Church The Body of Christ Napolan Chapel - Baptism Online Appointment</h3>
+          <div class="project-type">Religious Management System</div>
+          <div class="project-description">
+            Online baptism appointment system for church members. Features appointment scheduling, 
+            member registration, document management, notification system, and administrative 
+            dashboard for streamlined church operations and better member services.
+          </div>
+          <div class="project-tech">
+            <span class="tech-tag">PHP</span>
+            <span class="tech-tag">MySQL</span>
+            <span class="tech-tag">HTML5</span>
+            <span class="tech-tag">CSS3</span>
+            <span class="tech-tag">JavaScript</span>
+            <span class="tech-tag">Bootstrap</span>
+          </div>
+        </div>
+      </div>
+</section>
 
     <!-- Contact Section -->
     <section id="contact" class="section">
