--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
-    <!-- EmailJS CDN -->
-    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 
     <style>
       * {
@@ -50,7 +48,7 @@
       }
 
       .logo {
-        font-size: 1.5rem;
+        font-size: 1.2rem;
         font-weight: 800;
         background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
         -webkit-background-clip: text;
@@ -62,6 +60,11 @@
         display: flex;
         list-style: none;
         gap: 1.5rem;
+        transition: all 0.3s ease;
+      }
+
+      .nav-menu.active {
+        display: flex;
       }
 
       .nav-link {
@@ -92,6 +95,14 @@
         width: 100%;
       }
 
+      .hamburger {
+        display: none;
+        cursor: pointer;
+        font-size: 1.5rem;
+        color: #667eea;
+        z-index: 1001;
+      }
+
       /* Hero Section */
       .hero {
         min-height: 100vh;
@@ -101,6 +112,7 @@
         color: white;
         position: relative;
         overflow: hidden;
+        padding-top: 80px;
       }
 
       .hero::before {
@@ -161,6 +173,7 @@
         gap: 1rem;
         opacity: 0;
         animation: slideInLeft 1s ease 0.8s forwards;
+        flex-wrap: wrap;
       }
 
       .btn {
@@ -173,6 +186,9 @@
         font-weight: 600;
         transition: all 0.3s ease;
         border: 2px solid transparent;
+        text-align: center;
+        justify-content: center;
+        white-space: nowrap;
       }
 
       .btn-primary {
@@ -216,6 +232,7 @@
         height: 300px;
         border-radius: 50%;
         border: 4px solid rgba(255, 255, 255, 0.3);
+        object-fit: cover;
       }
 
       /* Section Styles */
@@ -263,6 +280,7 @@
         width: 100%;
         border-radius: 20px;
         box-shadow: 0 20px 40px rgba(102, 126, 234, 0.2);
+        object-fit: cover;
       }
 
       .about-text h3 {
@@ -290,14 +308,16 @@
         align-items: center;
         gap: 1rem;
         padding: 0.5rem;
+        flex-wrap: wrap;
       }
 
       .info-item strong {
         color: #667eea;
         min-width: 100px;
+        flex-shrink: 0;
       }
 
-      /* Education Section */
+      /* Education & Experience Sections */
       .education-grid, .experience-grid {
         display: grid;
         gap: 2rem;
@@ -330,6 +350,7 @@
 
       .education-title, .experience-title {
         flex: 1;
+        min-width: 200px;
       }
 
       .education-title h3, .experience-title h3 {
@@ -358,6 +379,7 @@
         font-weight: 600;
         font-size: 0.9rem;
         white-space: nowrap;
+        align-self: flex-start;
       }
 
       .education-description, .experience-description {
@@ -500,6 +522,25 @@
         font-size: 0.95rem;
       }
 
+      .certificate-link {
+        display: inline-flex;
+        align-items: center;
+        gap: 0.5rem;
+        margin-top: 1rem;
+        padding: 0.5rem 1rem;
+        background: #667eea;
+        color: white;
+        text-decoration: none;
+        border-radius: 20px;
+        font-size: 0.85rem;
+        transition: all 0.3s ease;
+      }
+
+      .certificate-link:hover {
+        background: #5a67d8;
+        transform: translateY(-2px);
+      }
+
       /* Projects Section */
       .projects-grid {
         display: grid;
@@ -580,30 +621,6 @@
         border-radius: 15px;
         font-size: 0.8rem;
         font-weight: 500;
-      }
-
-      .project-links {
-        display: flex;
-        gap: 1rem;
-      }
-
-      .project-link {
-        display: flex;
-        align-items: center;
-        gap: 0.5rem;
-        padding: 0.5rem 1rem;
-        background: #667eea;
-        color: white;
-        text-decoration: none;
-        border-radius: 20px;
-        font-size: 0.9rem;
-        font-weight: 500;
-        transition: all 0.3s ease;
-      }
-
-      .project-link:hover {
-        background: #5a67d8;
-        transform: translateY(-2px);
       }
 
       /* Contact Section */
@@ -705,6 +722,7 @@
         justify-content: center;
         color: white;
         font-size: 1.2rem;
+        flex-shrink: 0;
       }
 
       .contact-item h4 {
@@ -715,6 +733,7 @@
       .contact-item p {
         color: #666;
         margin: 0;
+        word-break: break-word;
       }
 
       /* Animations */
@@ -762,14 +781,15 @@
       }
 
       /* Mobile Responsiveness */
-      .hamburger {
-        display: none;
-        cursor: pointer;
-        font-size: 1.5rem;
-        color: #667eea;
-      }
-
       @media (max-width: 768px) {
+        .nav-container {
+          padding: 1rem;
+        }
+
+        .logo {
+          font-size: 1rem;
+        }
+
         .nav-menu {
           display: none;
           position: absolute;
@@ -780,34 +800,124 @@
           flex-direction: column;
           padding: 1rem;
           box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+          gap: 0.5rem;
+        }
+
+        .nav-menu.active {
+          display: flex;
         }
 
         .hamburger {
           display: block;
         }
 
+        .hero {
+          padding-top: 100px;
+          min-height: auto;
+          padding-bottom: 3rem;
+        }
+
         .hero-content {
           grid-template-columns: 1fr;
           text-align: center;
           gap: 2rem;
+          padding: 0 1rem;
         }
 
         .hero-text h1 {
           font-size: 2.5rem;
+          line-height: 1.2;
         }
 
         .typed-text {
           font-size: 1.5rem;
         }
 
+        .subtitle {
+          font-size: 1rem;
+        }
+
         .hero-buttons {
           flex-direction: column;
-          align-items: center;
+          align-items: stretch;
+          gap: 1rem;
+        }
+
+        .btn {
+          width: 100%;
+          padding: 1rem;
+          font-size: 0.9rem;
+        }
+
+        .profile-img {
+          width: 250px;
+          height: 250px;
+        }
+
+        .section {
+          padding: 3rem 0;
+        }
+
+        .container {
+          padding: 0 1rem;
+        }
+
+        .section-title h2 {
+          font-size: 2rem;
+        }
+
+        .section-title p {
+          font-size: 1rem;
         }
 
         .about-content {
           grid-template-columns: 1fr;
           gap: 2rem;
+          text-align: center;
+        }
+
+        .about-text h3 {
+          font-size: 1.5rem;
+        }
+
+        .about-text p {
+          font-size: 1rem;
+        }
+
+        .info-grid {
+          grid-template-columns: 1fr;
+          gap: 0.5rem;
+        }
+
+        .info-item {
+          flex-direction: column;
+          align-items: flex-start;
+          gap: 0.5rem;
+          padding: 0.5rem 0;
+        }
+
+        .info-item strong {
+          min-width: auto;
+        }
+
+        .education-header, .experience-header {
+          flex-direction: column;
+          align-items: flex-start;
+          gap: 0.5rem;
+        }
+
+        .education-item, .experience-item {
+          padding: 1.5rem;
+        }
+
+        .education-title, .experience-title {
+          min-width: auto;
+        }
+
+        .education-year, .experience-year {
+          align-self: flex-start;
+          font-size: 0.8rem;
+          padding: 0.4rem 0.8rem;
         }
 
         .contact-content {
@@ -815,61 +925,124 @@
           gap: 2rem;
         }
 
-        .info-grid {
-          grid-template-columns: 1fr;
+        .contact-form {
+          padding: 1.5rem;
         }
 
-        .hero-buttons {
-          flex-direction: row;
-          justify-content: center;
+        .contact-item {
+          padding: 1rem;
+          gap: 0.8rem;
         }
 
-        .btn {
-          padding: 0.8rem 1.5rem;
-          font-size: 0.9rem;
-        }
-
-        .education-header, .experience-header {
-          flex-direction: column;
-          align-items: flex-start;
+        .contact-icon {
+          width: 40px;
+          height: 40px;
+          font-size: 1rem;
         }
 
         .projects-grid {
           grid-template-columns: 1fr;
         }
 
+        .project-content {
+          padding: 1.5rem;
+        }
+
+        .project-content h3 {
+          font-size: 1.2rem;
+        }
+
         .awards-grid {
           grid-template-columns: 1fr;
+        }
+
+        .award-item {
+          padding: 1.5rem;
+        }
+
+        .award-icon {
+          width: 60px;
+          height: 60px;
+          font-size: 1.5rem;
         }
       }
 
       @media (max-width: 480px) {
-        .container {
-          padding: 0 1rem;
-        }
-
-        .nav-container {
-          padding: 1rem;
-        }
-
         .hero-text h1 {
           font-size: 2rem;
         }
 
-        .section-title h2 {
-          font-size: 2rem;
+        .typed-text {
+          font-size: 1.2rem;
         }
 
-        .hero-buttons {
-          flex-direction: column;
-          width: 100%;
+        .section-title h2 {
+          font-size: 1.8rem;
+        }
+
+        .profile-img {
+          width: 200px;
+          height: 200px;
         }
 
         .btn {
-          width: 100%;
-          justify-content: center;
+          padding: 0.8rem;
+          font-size: 0.85rem;
         }
-      } 
+
+        .education-item, .experience-item {
+          padding: 1rem;
+        }
+
+        .contact-form {
+          padding: 1rem;
+        }
+
+        .project-content {
+          padding: 1rem;
+        }
+
+        .award-item {
+          padding: 1rem;
+        }
+
+        .form-control {
+          padding: 0.8rem;
+        }
+
+        .project-image {
+          height: 150px;
+          font-size: 2rem;
+        }
+
+        .tech-tag {
+          font-size: 0.75rem;
+          padding: 0.25rem 0.6rem;
+        }
+      }
+
+      @media (max-width: 360px) {
+        .hero-text h1 {
+          font-size: 1.8rem;
+        }
+
+        .typed-text {
+          font-size: 1.1rem;
+        }
+
+        .profile-img {
+          width: 180px;
+          height: 180px;
+        }
+
+        .container {
+          padding: 0 0.8rem;
+        }
+
+        .nav-container {
+          padding: 0.8rem;
+        }
+      }
     </style>
   </head>
   <body>
