--- a/index.html
+++ b/index.html
@@ -147,23 +147,20 @@
         animation: slideInLeft 1s ease 0.4s forwards;
       }
 
-       .typed-text {
-            font-size: 2rem;
-            font-weight: 600;
-            color: #ffd700;
-            min-height: 2.5rem;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            margin: 2rem 0;
-        }
+      .typed-text {
+        font-size: 2rem;
+        font-weight: 600;
+        margin-bottom: 2rem;
+        min-height: 2.5rem;
+        color: #ffd700;
+        opacity: 0;
+        animation: slideInLeft 1s ease 0.6s forwards;
+      }
 
-        /* Blinking cursor effect */
-        .typed-text::after {
-            content: '|';
-            animation: blink 1s infinite;
-            margin-left: 2px;
-        }
+      .typed-text::after {
+        content: "|";
+        animation: blink 1s infinite;
+      }
 
       .hero-buttons {
         display: flex;
@@ -1855,57 +1852,56 @@
         document.body.classList.add("loaded");
       });
 
-      // Typing Animation
-      document.addEventListener("DOMContentLoaded", function () {
-        const typedTextElement = document.getElementById("typed-text");
+        document.addEventListener("DOMContentLoaded", function () {
+            const typedTextElement = document.getElementById("typed-text");
+            
+            // Check if element exists
+            if (!typedTextElement) {
+                console.error("Element with id 'typed-text' not found!");
+                return;
+            }
 
-        // Array of words to cycle through
-        const words = ["PROGRAMMER", "WEB DEVELOPER", "FULL STACK DEVELOPER"];
+            // Array of words to cycle through
+            const words = ["PROGRAMMER", "WEB DEVELOPER", "FULL STACK DEVELOPER"];
 
-        let wordIndex = 0;
-        let charIndex = 0;
-        let isDeleting = false;
-        let typeSpeed = 150;
+            let wordIndex = 0;
+            let charIndex = 0;
+            let isDeleting = false;
+            let typeSpeed = 150;
 
-        function typeWriter() {
-          const currentWord = words[wordIndex];
+            function typeWriter() {
+                const currentWord = words[wordIndex];
 
-          if (isDeleting) {
-            // Remove characters
-            typedTextElement.textContent = currentWord.substring(
-              0,
-              charIndex - 1
-            );
-            charIndex--;
-            typeSpeed = 50; // Faster when deleting
-          } else {
-            // Add characters
-            typedTextElement.textContent = currentWord.substring(
-              0,
-              charIndex + 1
-            );
-            charIndex++;
-            typeSpeed = 150; // Normal typing speed
-          }
+                if (isDeleting) {
+                    // Remove characters
+                    typedTextElement.textContent = currentWord.substring(0, charIndex - 1);
+                    charIndex--;
+                    typeSpeed = 75; // Faster when deleting
+                } else {
+                    // Add characters
+                    typedTextElement.textContent = currentWord.substring(0, charIndex + 1);
+                    charIndex++;
+                    typeSpeed = 150; // Normal typing speed
+                }
 
-          // If word is complete
-          if (!isDeleting && charIndex === currentWord.length) {
-            // Pause at end of word
-            typeSpeed = 2000;
-            isDeleting = true;
-          } else if (isDeleting && charIndex === 0) {
-            // Move to next word
-            isDeleting = false;
-            wordIndex = (wordIndex + 1) % words.length;
-            typeSpeed = 500; // Pause before starting new word
-          }
+                // If word is complete
+                if (!isDeleting && charIndex === currentWord.length) {
+                    // Pause at end of word
+                    typeSpeed = 2000;
+                    isDeleting = true;
+                } else if (isDeleting && charIndex === 0) {
+                    // Move to next word
+                    isDeleting = false;
+                    wordIndex = (wordIndex + 1) % words.length;
+                    typeSpeed = 500; // Pause before starting new word
+                }
 
-          setTimeout(typeWriter, typeSpeed);
-        }
+                setTimeout(typeWriter, typeSpeed);
+            }
 
-        // Start the typing animation
-        typeWriter();
-      });
+            // Start the typing animation
+            typeWriter();
+        });
 
      // Complete Mobile Navigation System
 document.addEventListener('DOMContentLoaded', function() {
