--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
             </div>
           </div>
 
-          <!-- Medical Center IMM -->
+          <!-- Medical Center  -->
           <div class="project-card">
             <div class="project-image"><i class="fas fa-hospital-alt"></i></div>
             <div class="project-content">
@@ -431,7 +431,7 @@
                 <span class="tech-tag">PHP</span><span class="tech-tag">MySQL</span><span class="tech-tag">JavaScript</span>
                 <span class="tech-tag">Bootstrap</span><span class="tech-tag">AJAX</span><span class="tech-tag">Chart.js</span>
               </div>
-              <button class="view-project-btn" onclick="openProjectViewer('Medical Center IMM System', ['img/imm 1.jpg','img/imm 2.jpg'])">
+              <button class="view-project-btn" onclick="openProjectViewer('Medical Center IMM System', ['img/imm 1.jpg','img/imm 2.jpg','img/imm 3.png'])">
                 <i class="fas fa-eye"></i> View Project
               </button>
             </div>
@@ -698,3 +698,4 @@
     </script>
 </body>
 </html>
+
