--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
             <p>I am a dedicated and results-driven developer with a proven track record of creating innovative web solutions. With a keen understanding of both frontend and backend technologies, I excel in building scalable applications and delivering value-driven solutions that meet both client and business objectives.</p>
             <div class="info-grid">
               <div class="info-item"><strong>Name:</strong><span>Aljhon Caangay</span></div>
-              <div class="info-item"><strong>Age:</strong><span>24 years old</span></div>
+              <div class="info-item"><strong>Age:</strong><span>25 years old</span></div>
               <div class="info-item"><strong>Address:</strong><span>Philippines</span></div>
               <div class="info-item"><strong>Nationality:</strong><span>Filipino</span></div>
               <div class="info-item"><strong>Phone:</strong><span>+63 905 7466 197</span></div>
@@ -313,7 +313,7 @@
           </div>
 
           <div class="experience-item">
-            <div class="experience-header"><div class="experience-title"><h3>Liaison Officer</h3><div class="experience-company">Rose Travel and Tours</div><div class="experience-location">Philippines</div></div><div class="experience-year">2023 - 2024</div></div>
+            <div class="experience-header"><div class="experience-title"><h3>Ticket Agent</h3><div class="experience-company">Rose Travel and Tours</div><div class="experience-location">Philippines</div></div><div class="experience-year">2023 - 2024</div></div>
             <div class="experience-description">Served as primary liaison between the company and various stakeholders including clients, government agencies, and partner organizations. Managed administrative processes, coordinated travel arrangements, and ensured smooth communication channels.</div>
           </div>
           <div class="experience-item">
@@ -696,3 +696,4 @@
     </script>
 </body>
 </html>
+
