--- a/index.html
+++ b/index.html
@@ -281,9 +281,18 @@
         <div class="section-title"><h2>Educational Background</h2><p>My academic journey and qualifications</p></div>
         <div class="education-grid">
           <div class="education-item">
-            <div class="education-header"><div class="education-title"><h3>Bachelor's Degree</h3><div class="education-school">Zamboanga Del Sur Provincial Government College</div><div class="education-location">Zamboanga del Sur, Philippines</div></div><div class="education-year">2021 - 2025</div></div>
-            <div class="education-description">Currently pursuing bachelor's degree with focus on developing comprehensive knowledge and skills. Actively engaged in academic activities and maintaining strong academic performance throughout the program.</div>
-          </div>
+  <div class="education-header">
+    <div class="education-title">
+      <h3>Bachelor's Degree</h3>
+      <div class="education-school">Zamboanga Del Sur Provincial Government College</div>
+      <div class="education-location">Zamboanga del Sur, Philippines</div>
+    </div>
+    <div class="education-year">2021 - 2025</div>
+  </div>
+  <div class="education-description">
+    Completed a Bachelor's Degree with strong academic performance and active involvement in institutional and academic activities, demonstrating solid foundation and professional readiness.
+  </div>
+</div>
           <div class="education-item">
             <div class="education-header"><div class="education-title"><h3>Senior High School Diploma</h3><div class="education-school">Westprime Horizon Institute INC.</div><div class="education-location">Philippines</div></div><div class="education-year">2017 - 2019</div></div>
             <div class="education-description">Completed senior high school education with strong academic foundation. Developed critical thinking skills and prepared for higher education through comprehensive curriculum.</div>
@@ -696,4 +705,5 @@
     </script>
 </body>
 </html>
+
 
