Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
               <div class="project-description">A mobile-ready Point of Sale system built with Apache Cordova for cross-platform deployment. Features sales processing, inventory management, receipt generation, and sales reporting — works on both web and mobile devices.</div>
               <div class="project-tech">
                 <span class="tech-tag">HTML</span><span class="tech-tag">CSS</span><span class="tech-tag">JavaScript</span>
-                <span class="tech-tag">Bootstrap 5</span><span class="tech-tag">PHP</span><span class="tech-tag">Cordova</span>
+                <span class="tech-tag">Bootstrap 5</span><span class="tech-tag">PHP</span><span class="tech-tag">Cordova</span><span class="tech-tag">MySql</span>
               </div>
               <button class="view-project-btn" onclick="openProjectViewer('POS System', ['img/pos 1.png','img/pos 2.png'])">
                 <i class="fas fa-eye"></i> View Project
@@ -705,5 +705,6 @@
     </script>
 </body>
 </html>
+
 
 
